--- a/css/style.css
+++ b/css/style.css
@@ -1,174 +1,210 @@
-html,body {
-    padding: 0;
-    margin: auto;
-    box-sizing: border-box;
+html, body {
+  padding: 0;
+  margin: auto;
+  box-sizing: border-box;
 }
+
 /*
 colores 
- rgb(0, 80, 130)
+rgb(0, 80, 130)
 
 fuentes
 font-family: 'Roboto', sans-serif;
 
 */
-
 /*----inicio de estilos de header-----*/
-
 .container-header {
-    display: flex;
-    justify-content: space-between;
-    background: white;
+  display: flex;
+  justify-content: space-between;
+  background: white;
 }
 
 .logo {
-    width: 200px;
-    margin: 20px;
-    padding: 5px 5px 5px 5px;
+  width: 200px;
+  margin: 20px;
+  padding: 5px 5px 5px 5px;
 }
 
-
-
-
-.menu a {
-    color: #000000;
-    text-decoration: none;
-    font-size: 16px;
-    line-height: normal;
-    font-family: 'Roboto', sans-serif;
-    padding: 10px;
+header .navbar .navbar-nav .nav-item .nav-link,
+header .navbar .navbar-brand {
+  font-weight: 600;
 }
-
-
-
-.menu ul {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction:row;
-    list-style: none;
-    text-decoration: none;
-    margin-left: 200px;
-    padding: 20px;
-}
-
-.menu a:hover {
-    color: rgb(0, 80, 130);
-    line-height: 5px;
-}
-
-
 
 .portada {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 h1 {
-    font-family: 'Roboto', sans-serif;
-    letter-spacing: 1.5px;
-    font-size: 60px;
-    line-height: 100%;
-    position: absolute;
-    color: white;
-    text-align: center;
-    background-color: rgba(0,0,0,0.4);
-    padding: 20px;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 1.5px;
+  font-size: 60px;
+  line-height: 100%;
+  position: absolute;
+  color: white;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 20px;
 }
 
-.footer {
-    text-align: left;
-    background-color: #000000;
-   
-}
-
-.footer img {
-    width: 30px;
-    height: auto;
-}
-
-
-
-.footer ul li  {
-	display: inline-block;
-	color:white;
-	font-size: 13px;
-	font-weight: normal;
-	margin-left: 20px;
-	padding: 10px 5px 10px 0;
-    font-family: 'Roboto', sans-serif;
-}
-
-/*------estilos section index----------*/
-
-
-h2 {
-    font-family: 'Roboto', sans-serif;
-    font-style: italic;
+@media screen and (max-width: 576px) {
+  h1 {
     font-size: 30px;
-    letter-spacing: 1.5px;
-    line-height: 100%;
-    color: black;
-    text-align: center;
+  }
 }
-
+/*------estilos section index----------*/
+h2 {
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-size: 30px;
+  letter-spacing: 1.5px;
+  line-height: 100%;
+  color: black;
+  text-align: center;
+  padding: 20px;
+}
 
 .info-inicio {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    color: #000000;
-    text-align: center;
-    margin: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #000000;
+  text-align: center;
+  padding: 0 20px 20px 20px;
 }
 
 .texto-pages {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    color: #000000;
-    text-align: justify;
-    margin: 30px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #000000;
+  text-align: justify;
+  margin: 30px;
 }
 
 .box-wrap {
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    align-items: center;
-    gap: 10px;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+.box-wrap div {
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-    .box-wrap div {
-      width: auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+@media screen and (max-width: 576px) {
+  .box-wrap {
+    width: 100%;
+    display: block;
+    justify-content: center;
+  }
+  .box-wrap img {
+    padding: 10px;
+  }
+}
+.section {
+  background-color: blue;
+  width: 80px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr 1fr;
+}
 
-    .section {
-        background-color: blue;
-        width: 80px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 1fr 1fr 1fr; 
-    }
+/*-----estilos institucional-------*/
+h3 {
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-size: 30px;
+  letter-spacing: 1.5px;
+  line-height: 100%;
+  color: black;
+  text-align: left;
+  margin: 30px;
+}
 
-    /*-----estilos institucional-------*/
+/*-----estilos contacto-------*/
+.mapa {
+  margin: 30px;
+}
 
-    h3 {
-        font-family: 'Roboto', sans-serif;
-        font-style: italic;
-        font-size: 30px;
-        letter-spacing: 1.5px;
-        line-height: 100%;
-        color: black;
-        text-align:left;
-        margin: 30px;
-    }
+/*-----cards------*/
+.card-carrera {
+  width: 450px;
+  box-shadow: 0 0 20px gray;
+  margin: 10px;
+}
+.card-carrera div img {
+  width: 100%;
+}
 
-        /*-----estilos contacto-------*/
+.card-carrera .contenido-carrera {
+  padding: 10px 20px 20px;
+}
+.card-carrera .contenido-carrera div p {
+  text-decoration: line-through;
+}
+.card-carrera .contenido-carrera div h4 {
+  font-size: 20px;
+  color: rgb(217, 16, 16);
+  margin-bottom: 10px;
+}
 
-    .mapa {
-        margin: 30px;
-    }
-    
+.boton {
+  padding: 10px 20px;
+  border: 1px solid black;
+  background-color: black;
+  border-radius: 5px;
+  color: white;
+}
+
+.boton:hover {
+  background-color: rgb(0, 80, 130);
+}
+
+h5 {
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-size: 30px;
+  letter-spacing: 1.5px;
+  line-height: 100%;
+  color: black;
+  text-align: left;
+}
+
+@media screen and (max-width: 576px) {
+  .card-carrera {
+    width: 90%;
+  }
+}
+/*-----estilos footer-----*/
+.footer {
+  text-align: left;
+  background-color: #000000;
+}
+.footer img {
+  width: 30px;
+  height: auto;
+}
+.footer ul li {
+  display: inline-block;
+  color: white;
+  font-size: 13px;
+  font-weight: normal;
+  margin-left: 20px;
+  padding: 10px 5px 10px 0;
+  font-family: "Roboto", sans-serif;
+}
+
+@media screen and (max-width: 576px) {
+  .footer {
+    text-align: center;
+    align-items: center;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
